# platform.core.system.system-server

./: AUTHORS  CMakeLists.txt  NOTICE  device-daemon.in  deviced.conf  deviced.pc.in  edbus-handler.c  edbus-handler.h  mmc-smack-label  project.config  shutdown.sh  ss_bs.c  ss_bs.h  ss_common.h  ss_core.c  ss_core.h  ss_cpu_handler.c  ss_cpu_handler.h  ss_device_change_handler.c  ss_device_handler.h  ss_device_plugin.c  ss_device_plugin.h  ss_launch.c  ss_launch.h  ss_log.c  ss_log.h  ss_lowbat_handler.c  ss_lowmem_handler.c  ss_main.c  ss_mmc_handler.c  ss_noti.c  ss_noti.h  ss_pmon_handler.c  ss_pmon_handler.h  ss_predefine.c  ss_predefine.h  ss_procmgr.c  ss_procmgr.h  ss_queue.c  ss_queue.h  (+13 more)
debian/: changelog  control  rules  system-server-bin.install.in  system-server-bin.postinst.in
devman/: CMakeLists.txt  devman.pc.in  devman_haptic.pc.in
devman/TC/unit/: Makefile  tslist  utc_MODULE_API_func.c.in  utc_SystemFW_device_get_battery_pct_func.c  utc_SystemFW_device_get_display_brt_func.c  utc_SystemFW_device_get_display_gamma_func.c  utc_SystemFW_device_get_max_brt_func.c  utc_SystemFW_device_get_property_func.c  utc_SystemFW_device_haptic_get_pattern_duration_func.c  utc_SystemFW_device_haptic_open_func.c  utc_SystemFW_device_haptic_play_file_func.c  utc_SystemFW_device_haptic_play_pattern_func.c  utc_SystemFW_device_haptic_stop_play_func.c  utc_SystemFW_device_is_battery_full_func.c  utc_SystemFW_device_release_brt_ctrl_func.c  utc_SystemFW_device_release_gamma_ctrl_func.c  utc_SystemFW_device_set_display_brt_func.c  utc_SystemFW_device_set_display_gamma_func.c  utc_SystemFW_device_set_property_func.c
devman/include/: SLP_devman_PG.h  devlog.h  devman.h  devman_PG.h  devman_haptic.h  devman_haptic_ext.h  devman_haptic_ext_core.h  devman_image.h  devman_internal.h  devman_managed.h
devman/src/: device_haptic.c  devman_internal.c  display_wd.c  if_legacy.c
display/: battery.c  battery.h  conf.c  conf.h  core.c  core.h  display-dbus.c  key-filter.c  llinterface.c  llinterface.h  lsensor.c  poll.c  poll.h  setting.c  setting.h  util.c  util.h  x-lcd-on.c
fsck-msdos/: CMakeLists.txt  LICENSE  check.c
haptic/: CMakeLists.txt  SLP_haptic_PG.h  haptic-plugin.pc.in  haptic.pc.in  haptic_PG.h
haptic/TC/unit/: Makefile  tslist  utc_SystemFW_haptic_close_func.c  utc_SystemFW_haptic_get_file_duration_func.c  utc_SystemFW_haptic_play_monotone_func.c
haptic/include/: haptic.h  haptic_log.h  haptic_module.h  haptic_plugin_intf.h
haptic/src/: device_convert.c  haptic.c
include/: ss_data.h
libslp-pm/: CMakeLists.txt  SLP_pm_PG.h  pm.c  pm.h  pm_PG.h  pmapi.h  pmapi.pc.in  pmapi_managed.h
libslp-pm/TC/: build.sh
libslp-pm/TC/unit/: Makefile  tslist  utc_SystemFW_pm_change_state_func.c  utc_SystemFW_pm_lock_state_func.c  utc_SystemFW_pm_unlock_state_func.c
packaging/: deviced.manifest  deviced.rule  regpmon.service  system-server.changes  system-server.manifest  system-server.rule  system-server.service  system-server.spec  zbooting-done.service
pm_event/: CMakeLists.txt  pm_event.c
predefine_act_plugin/: CMakeLists.txt  build.sh  xxx-predefine.c
restarter/: CMakeLists.txt  restart.c
scripts/: mmc-smack-label  movi_format.sh
src/battery/: lowbat-handler.c  lowbat-handler.h
src/bs/: bs.c  bs.h
src/control/: control.c
src/core/: common.c  common.h  core.c  core.h  data.h  device-change-handler.c  device-handler.h  device-notifier.c  device-notifier.h  devices.c  devices.h  edbus-handler.c  edbus-handler.h  launch.c  launch.h  list.h  log.c  log.h  main.c  noti.c  noti.h  predefine.c  predefine.h  queue.c  queue.h  sig-handler.c  sig-handler.h  sysnoti.c  sysnoti.h  udev.h
src/cpu/: cpu-handler.c  cpu-handler.h
src/deviced/: dd-battery.h  dd-control.h  dd-deviced-managed.h  dd-deviced.h  dd-display.h  dd-haptic.h  dd-led.h  dd-system-managed.h  dd-system.h  haptic-module.h  haptic-plugin-intf.h
src/display/: battery.c  battery.h  conf.c  conf.h  core.c  core.h  display-dbus.c  key-filter.c  llinterface.c  llinterface.h  lsensor.c  poll.c  poll.h  setting.c  setting.h  util.c  util.h  x-lcd-on.c
src/haptic/: haptic.c
src/led/: led.c  led.h
src/mmc/: ext4.c  mmc-handler.c  mmc-handler.h  vfat.c
src/power/: power-handler.c
src/proc/: lowmem-handler.c  lowmem-handler.h  pmon-handler.c  pmon-handler.h  proc-handler.c  proc-handler.h  procmgr.c  procmgr.h
src/shared/: battery.c  common.h  control.c  dbus.c  dbus.h  deviced-conf.c  deviced-internal.h  deviced-noti.c  deviced-priv.h  deviced-util.c  (+9 more)
sys_device_noti/: CMakeLists.txt  sys_device_noti.c  sys_device_noti.h
sys_device_noti/po_sys_device_noti/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+10 more)
sys_event/: CMakeLists.txt  sys_event.c
sys_pci_noti/: CMakeLists.txt  sys_pci_noti.c  sys_pci_noti.h
sys_pci_noti/po_sys_pci_noti/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en_PH.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  ga.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_PT.po  ro.po  ru_RU.po  sk.po  sl.po  sr.po  sv.po  tr_TR.po  (+4 more)
sysman/: CMakeLists.txt  sysconf.c  sysman-internal.h  sysman-priv.h  sysman-util.c  sysman.h  sysman.pc.in  sysman_PG.h  sysman_managed.h  sysnoti.c
sysman/TC/unit/: Makefile  utc_SystemFW_sysconf_set_mempolicy_bypid_func.c  utc_SystemFW_sysconf_set_mempolicy_func.c  utc_SystemFW_sysconf_set_permanent_bypid_func.c  utc_SystemFW_sysconf_set_permanent_func.c  utc_SystemFW_sysconf_set_vip_func.c  utc_SystemFW_sysman_get_apppath_func.c  utc_SystemFW_sysman_set_datetime_func.c
sysman/set_pmon/: CMakeLists.txt  pmon  regpmon  set_pmon.c
systemd/: system-server.service  system-server.socket
udev-rules/: 91-system-server.rules.in
utils/: regpmon  set_pmon
(+22 files in other folders)
