CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set(SET_PMON set_pmon)

SET(SRCS set_pmon.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(${SET_PMON} ${SRCS})
TARGET_LINK_LIBRARIES(${SET_PMON} ${PROJECT_NAME})
INSTALL(TARGETS ${SET_PMON} DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/regpmon DESTINATION bin)
